--- a/Neurotrauma/Localization/German/German.xml
+++ b/Neurotrauma/Localization/German/German.xml
@@ -71,6 +71,25 @@
 <entityname.organscalpel_heart>Organbeschaffungsskalpel: Herz</entityname.organscalpel_heart>
 <entitydescription.organscalpel_heart>Ein spezialisiertes Skalpel für die Entfernung des Herzes.</entitydescription.organscalpel_heart>
 
+<!--<entityname.multiscalpel>Multipurpose scalpel</entityname.multiscalpel>
+<entitydescription.multiscalpel>A scalpel you can choose what to do with, be it make an incision, extract organs, remove bandages, or do malpractice.</entitydescription.multiscalpel>
+<multiscalpel.incision>Mode: Surgery incision</multiscalpel.incision>
+<multiscalpel.kidneys>Mode: Extract kidneys</multiscalpel.kidneys>
+<multiscalpel.liver>Mode: Extract liver</multiscalpel.liver>
+<multiscalpel.lungs>Mode: Extract lungs</multiscalpel.lungs>
+<multiscalpel.heart>Mode: Extract heart</multiscalpel.heart>
+<multiscalpel.brain>Mode: Extract brain</multiscalpel.brain>
+<multiscalpel.bandage>Mode: Remove bandages and casts / malpractice</multiscalpel.bandage>
+<multiscalpel.speedflex>Mode: Adaptive organ extraction. Use on head for brain, left arm for kidneys, torso for liver, right arm for heart, left leg for lungs.</multiscalpel.speedflex>
+
+<multiscalpel.btn.incision>Incision</multiscalpel.btn.incision>
+<multiscalpel.btn.kidneys>Kidneys</multiscalpel.btn.kidneys>
+<multiscalpel.btn.liver>Liver</multiscalpel.btn.liver>
+<multiscalpel.btn.lungs>Lungs</multiscalpel.btn.lungs>
+<multiscalpel.btn.heart>Heart</multiscalpel.btn.heart>
+<multiscalpel.btn.brain>Brain</multiscalpel.btn.brain>
+<multiscalpel.btn.bandage>Bandages, casts, malpractice</multiscalpel.btn.bandage>
+<multiscalpel.btn.speedflex>Adaptive organ extraction</multiscalpel.btn.speedflex>-->
 
 
 <!-- /// Behandlungen /// -->
@@ -107,7 +126,12 @@
 <entityname.propofol>Propofol</entityname.propofol>
 <entitydescription.propofol>Ein schnell wirkendes Medikament, welches zu einem verminderten Bewusstseinszustand und Gedächtnisverlust führt. Es wird für den Start und die Instandhaltung einer Vollnarkose genutzt.</entitydescription.propofol>
 
+<!--<entityname.gypsum></entityname.gypsum>
+<entitydescription.gypsum></entitydescription.gypsum>
 
+<entityname.gelipack></entityname.gelipack>
+<entitydescription.gelipack></entitydescription.gelipack>
+-->
 
 <!-- /// Blood stuff /// -->
 
@@ -402,6 +426,9 @@ Kann spenden an: AB+</entitydescription.abpluscard>
 
 <afflictionname.needlec>Nadel</afflictionname.needlec>
 <afflictiondescription.needlec>Normalisiert den Druck im Brustkorb.</afflictiondescription.needlec>
+
+<!--<afflictionname.iced></afflictionname.iced>
+<afflictiondescription.iced></afflictiondescription.iced>-->
 
 <!-- fractures, amputations, dislocations and bleeding arteries-->
 <afflictionname.ra_fracture>Gebrochener, rechter Humerus</afflictionname.ra_fracture>
