--- a/Neurotrauma/Localization/French/French.xml
+++ b/Neurotrauma/Localization/French/French.xml
@@ -84,6 +84,25 @@
 <entityname.organscalpel_brain>Scalpel de prélèvement d'organe: Cerveau</entityname.organscalpel_brain>
 <entitydescription.organscalpel_brain>Un scalpel spécialisé pour la récupération du cerveau.</entitydescription.organscalpel_brain>
 
+<!--<entityname.multiscalpel>Multipurpose scalpel</entityname.multiscalpel>
+<entitydescription.multiscalpel>A scalpel you can choose what to do with, be it make an incision, extract organs, remove bandages, or do malpractice.</entitydescription.multiscalpel>
+<multiscalpel.incision>Mode: Surgery incision</multiscalpel.incision>
+<multiscalpel.kidneys>Mode: Extract kidneys</multiscalpel.kidneys>
+<multiscalpel.liver>Mode: Extract liver</multiscalpel.liver>
+<multiscalpel.lungs>Mode: Extract lungs</multiscalpel.lungs>
+<multiscalpel.heart>Mode: Extract heart</multiscalpel.heart>
+<multiscalpel.brain>Mode: Extract brain</multiscalpel.brain>
+<multiscalpel.bandage>Mode: Remove bandages and casts / malpractice</multiscalpel.bandage>
+<multiscalpel.speedflex>Mode: Adaptive organ extraction. Use on head for brain, left arm for kidneys, torso for liver, right arm for heart, left leg for lungs.</multiscalpel.speedflex>
+
+<multiscalpel.btn.incision>Incision</multiscalpel.btn.incision>
+<multiscalpel.btn.kidneys>Kidneys</multiscalpel.btn.kidneys>
+<multiscalpel.btn.liver>Liver</multiscalpel.btn.liver>
+<multiscalpel.btn.lungs>Lungs</multiscalpel.btn.lungs>
+<multiscalpel.btn.heart>Heart</multiscalpel.btn.heart>
+<multiscalpel.btn.brain>Brain</multiscalpel.btn.brain>
+<multiscalpel.btn.bandage>Bandages, casts, malpractice</multiscalpel.btn.bandage>
+<multiscalpel.btn.speedflex>Adaptive organ extraction</multiscalpel.btn.speedflex>-->
 
 
 <!-- /// Treatments /// -->
@@ -131,6 +150,9 @@
 
 <entityname.gypsum>Gypse</entityname.gypsum>
 <entitydescription.gypsum>Une fine poudre minérale utilisée pour recouvrir les fractures, dans un plâtre. Un bandage doit être d'abord appliqué.</entitydescription.gypsum>
+
+<!--<entityname.gelipack></entityname.gelipack>
+<entitydescription.gelipack></entitydescription.gelipack>-->
 
 
 <!-- /// Blood stuff /// -->
@@ -443,6 +465,9 @@ Peut donner du sang à: AB+</entitydescription.abpluscard>
 
 <afflictionname.needlec>Aiguille</afflictionname.needlec>
 <afflictiondescription.needlec>Normalise la pression dans la cavité pleurale.</afflictiondescription.needlec>
+
+<!--<afflictionname.iced></afflictionname.iced>
+<afflictiondescription.iced></afflictiondescription.iced>-->
 
 <!-- fractures, amputations, dislocations and bleeding arteries-->
 <afflictionname.ra_fracture>Humérus droit fracturé</afflictionname.ra_fracture>
