--- a/Neurotrauma/Localization/Korean/Korean.xml
+++ b/Neurotrauma/Localization/Korean/Korean.xml
@@ -55,6 +55,24 @@
   <entitydescription.organscalpel_heart>심장 적출을 위한 특수 메스.</entitydescription.organscalpel_heart>
   <entityname.organscalpel_brain>장기 적출용 메스: 뇌</entityname.organscalpel_brain>
   <entitydescription.organscalpel_brain>뇌를 적출하기 위한 특수 메스.</entitydescription.organscalpel_brain>
+  <!--<entityname.multiscalpel>Multipurpose scalpel</entityname.multiscalpel>
+  <entitydescription.multiscalpel>A scalpel you can choose what to do with, be it make an incision, extract organs, remove bandages, or do malpractice.</entitydescription.multiscalpel>
+  <multiscalpel.incision>Mode: Surgery incision</multiscalpel.incision>
+  <multiscalpel.kidneys>Mode: Extract kidneys</multiscalpel.kidneys>
+  <multiscalpel.liver>Mode: Extract liver</multiscalpel.liver>
+  <multiscalpel.lungs>Mode: Extract lungs</multiscalpel.lungs>
+  <multiscalpel.heart>Mode: Extract heart</multiscalpel.heart>
+  <multiscalpel.brain>Mode: Extract brain</multiscalpel.brain>
+  <multiscalpel.bandage>Mode: Remove bandages and casts / malpractice</multiscalpel.bandage>
+  <multiscalpel.speedflex>Mode: Adaptive organ extraction. Use on head for brain, left arm for kidneys, torso for liver, right arm for heart, left leg for lungs.</multiscalpel.speedflex>
+  <multiscalpel.btn.incision>Incision</multiscalpel.btn.incision>
+  <multiscalpel.btn.kidneys>Kidneys</multiscalpel.btn.kidneys>
+  <multiscalpel.btn.liver>Liver</multiscalpel.btn.liver>
+  <multiscalpel.btn.lungs>Lungs</multiscalpel.btn.lungs>
+  <multiscalpel.btn.heart>Heart</multiscalpel.btn.heart>
+  <multiscalpel.btn.brain>Brain</multiscalpel.btn.brain>
+  <multiscalpel.btn.bandage>Bandages, casts, malpractice</multiscalpel.btn.bandage>
+  <multiscalpel.btn.speedflex>Adaptive organ extraction</multiscalpel.btn.speedflex>-->
   <!-- /// Treatments /// -->
   <entityname.mannitol>만니톨</entityname.mannitol>
   <entitydescription.mannitol>당 환원 알코올의 일종. 신경 외상으로부터 회복을 돕기 위해 사용됩니다. 장기 손상을 일으킬 수 있습니다.</entitydescription.mannitol>
@@ -88,7 +106,9 @@
   <entitydescription.propofol>의식 수준을 감소시키고 사건에 대한 기억력 부족을 초래하는 속효성 약물입니다. 그 용도에는 전신 마취의 시작과 유지가 포함됩니다.</entitydescription.propofol>
   <entityname.gypsum>석고</entityname.gypsum>
   <entitydescription.gypsum>사지의 골절을 깁스로 둘러싸는 데 사용되는 미세한 미네랄 분말입니다. 붕대를 먼저 감아야 합니다.</entitydescription.gypsum>
-  
+  <!--<entityname.gelipack></entityname.gelipack>
+  <entitydescription.gelipack></entitydescription.gelipack>
+  -->
   <!-- /// Blood stuff /// -->
   <!--<entityname.bloodrefinery>Blood Refinery</entityname.bloodrefinery>-->
   <!-- <entitydescription.bloodrefinery></entitydescription.bloodrefinery> -->
@@ -327,6 +347,8 @@
 <afflictiondescription.ointmented>항생제 젤 층은 모든 세균으로부터 상처를 보호하고 청소합니다.</afflictiondescription.ointmented>
 <afflictionname.needlec>바늘</afflictionname.needlec>
 <afflictiondescription.needlec>흉막강의 압력을 정상화합니다.</afflictiondescription.needlec>
+<!--<afflictionname.iced></afflictionname.iced>
+<afflictiondescription.iced></afflictiondescription.iced>-->
 
 <!-- fractures, amputations, dislocations and bleeding arteries-->
 <afflictionname.ra_fracture>오른쪽 상완골 골절</afflictionname.ra_fracture>
