--- a/Neurotrauma/Localization/Portuguese/Portuguese.xml
+++ b/Neurotrauma/Localization/Portuguese/Portuguese.xml
@@ -57,6 +57,24 @@
 <entitydescription.organscalpel_heart>Um bisturi especializado para a remoção do coração.</entitydescription.organscalpel_heart>
 <entityname.organscalpel_brain>Bisturi para Aquisição de Órgãos: Cérebro</entityname.organscalpel_brain>
 <entitydescription.organscalpel_brain>Um bisturi especializado para a remoção do cérebro.</entitydescription.organscalpel_brain>
+<!--<entityname.multiscalpel>Multipurpose scalpel</entityname.multiscalpel>
+<entitydescription.multiscalpel>A scalpel you can choose what to do with, be it make an incision, extract organs, remove bandages, or do malpractice.</entitydescription.multiscalpel>
+<multiscalpel.incision>Mode: Surgery incision</multiscalpel.incision>
+<multiscalpel.kidneys>Mode: Extract kidneys</multiscalpel.kidneys>
+<multiscalpel.liver>Mode: Extract liver</multiscalpel.liver>
+<multiscalpel.lungs>Mode: Extract lungs</multiscalpel.lungs>
+<multiscalpel.heart>Mode: Extract heart</multiscalpel.heart>
+<multiscalpel.brain>Mode: Extract brain</multiscalpel.brain>
+<multiscalpel.bandage>Mode: Remove bandages and casts / malpractice</multiscalpel.bandage>
+<multiscalpel.speedflex>Mode: Adaptive organ extraction. Use on head for brain, left arm for kidneys, torso for liver, right arm for heart, left leg for lungs.</multiscalpel.speedflex>
+<multiscalpel.btn.incision>Incision</multiscalpel.btn.incision>
+<multiscalpel.btn.kidneys>Kidneys</multiscalpel.btn.kidneys>
+<multiscalpel.btn.liver>Liver</multiscalpel.btn.liver>
+<multiscalpel.btn.lungs>Lungs</multiscalpel.btn.lungs>
+<multiscalpel.btn.heart>Heart</multiscalpel.btn.heart>
+<multiscalpel.btn.brain>Brain</multiscalpel.btn.brain>
+<multiscalpel.btn.bandage>Bandages, casts, malpractice</multiscalpel.btn.bandage>
+<multiscalpel.btn.speedflex>Adaptive organ extraction</multiscalpel.btn.speedflex>-->
 <!-- /// Treatments /// -->
 <entityname.mannitol>Manitol</entityname.mannitol>
 <entitydescription.mannitol>Um tipo de álcool de açúcar. É usado para ajudar na recuperação de neurotrauma. Pode causar danos aos órgãos.</entitydescription.mannitol>
@@ -88,6 +106,8 @@
 <entitydescription.propofol>Um medicamento de ação curta que resulta na diminuição do nível de consciência e falta de memória dos eventos. Seus usos incluem o início e a manutenção da anestesia geral.</entitydescription.propofol>
 <entityname.gypsum>Gesso</entityname.gypsum>
 <entitydescription.gypsum>Um pó mineral fino que é usado para encapsular fraturas em extremidades com um molde. Aplique uma bandagem primeiro.</entitydescription.gypsum>
+<!--<entityname.gelipack></entityname.gelipack>
+<entitydescription.gelipack></entitydescription.gelipack>-->
 <!-- /// Blood stuff /// -->
 <!--<entityname.bloodrefinery>Refinaria de Sangue</entityname.bloodrefinery>-->
 <!-- <entitydescription.bloodrefinery></entitydescription.bloodrefinery> -->
@@ -298,6 +318,8 @@ Pode dar sangue para: AB+</entitydescription.abpluscard>
 <afflictiondescription.ointmented>Uma camada de gel antibiótico protege e limpa a ferida de qualquer germe.</afflictiondescription.ointmented>
 <afflictionname.needlec>Agulha</afflictionname.needlec>
 <afflictiondescription.needlec>Normaliza a pressão na cavidade pleural.</afflictiondescription.needlec>
+<!--<afflictionname.iced></afflictionname.iced>
+<afflictiondescription.iced></afflictiondescription.iced>-->
 <!-- fractures, amputations, dislocations and bleeding arteries-->
 <afflictionname.ra_fracture>Úmero Direito Fraturado</afflictionname.ra_fracture>
 <afflictiondescription.ra_fracture>Seu braço direito está quebrado.</afflictiondescription.ra_fracture>
