--- a/Neurotrauma/Localization/Spanish/Spanish.xml
+++ b/Neurotrauma/Localization/Spanish/Spanish.xml
@@ -84,6 +84,25 @@
 <entityname.organscalpel_brain>Bisturí de obtención de órganos: Cerebro</entityname.organscalpel_brain>
 <entitydescription.organscalpel_brain>Un bisturí especializado para la extracción del cerebro.</entitydescription.organscalpel_brain>
 
+<!--<entityname.multiscalpel>Multipurpose scalpel</entityname.multiscalpel>
+<entitydescription.multiscalpel>A scalpel you can choose what to do with, be it make an incision, extract organs, remove bandages, or do malpractice.</entitydescription.multiscalpel>
+<multiscalpel.incision>Mode: Surgery incision</multiscalpel.incision>
+<multiscalpel.kidneys>Mode: Extract kidneys</multiscalpel.kidneys>
+<multiscalpel.liver>Mode: Extract liver</multiscalpel.liver>
+<multiscalpel.lungs>Mode: Extract lungs</multiscalpel.lungs>
+<multiscalpel.heart>Mode: Extract heart</multiscalpel.heart>
+<multiscalpel.brain>Mode: Extract brain</multiscalpel.brain>
+<multiscalpel.bandage>Mode: Remove bandages and casts / malpractice</multiscalpel.bandage>
+<multiscalpel.speedflex>Mode: Adaptive organ extraction. Use on head for brain, left arm for kidneys, torso for liver, right arm for heart, left leg for lungs.</multiscalpel.speedflex>
+
+<multiscalpel.btn.incision>Incision</multiscalpel.btn.incision>
+<multiscalpel.btn.kidneys>Kidneys</multiscalpel.btn.kidneys>
+<multiscalpel.btn.liver>Liver</multiscalpel.btn.liver>
+<multiscalpel.btn.lungs>Lungs</multiscalpel.btn.lungs>
+<multiscalpel.btn.heart>Heart</multiscalpel.btn.heart>
+<multiscalpel.btn.brain>Brain</multiscalpel.btn.brain>
+<multiscalpel.btn.bandage>Bandages, casts, malpractice</multiscalpel.btn.bandage>
+<multiscalpel.btn.speedflex>Adaptive organ extraction</multiscalpel.btn.speedflex>-->
 
 
 <!-- /// Treatments /// -->
@@ -132,6 +151,8 @@
 <entityname.gypsum>Yeso</entityname.gypsum>
 <entitydescription.gypsum>Polvo mineral fino que se utiliza para enyesar fracturas en las extremidades. Aplique un vendaje primero.</entitydescription.gypsum>
 
+<!--<entityname.gelipack></entityname.gelipack>
+<entitydescription.gelipack></entitydescription.gelipack>-->
 
 <!-- /// Blood stuff /// -->
 
@@ -443,6 +464,9 @@ Puede dar sangre a: AB+</entitydescription.abpluscard>
 
 <afflictionname.needlec>Aguja</afflictionname.needlec>
 <afflictiondescription.needlec>Normaliza la presión en la cavidad pleural</afflictiondescription.needlec>
+
+<!--<afflictionname.iced></afflictionname.iced>
+<afflictiondescription.iced></afflictiondescription.iced>-->
 
 <!-- fractures, amputations, dislocations and bleeding arteries-->
 <afflictionname.ra_fracture>Húmero derecho fracturado</afflictionname.ra_fracture>
