--- a/Neurotrauma/Localization/Turkish/Turkish.xml
+++ b/Neurotrauma/Localization/Turkish/Turkish.xml
@@ -84,6 +84,25 @@
 <entityname.organscalpel_brain>Organ Tedarik Neşteri: Beyin</entityname.organscalpel_brain>
 <entitydescription.organscalpel_brain>Beyin dokusunu kesmek için özel üretilen neşter.</entitydescription.organscalpel_brain>
 
+<!--<entityname.multiscalpel>Multipurpose scalpel</entityname.multiscalpel>
+<entitydescription.multiscalpel>A scalpel you can choose what to do with, be it make an incision, extract organs, remove bandages, or do malpractice.</entitydescription.multiscalpel>
+<multiscalpel.incision>Mode: Surgery incision</multiscalpel.incision>
+<multiscalpel.kidneys>Mode: Extract kidneys</multiscalpel.kidneys>
+<multiscalpel.liver>Mode: Extract liver</multiscalpel.liver>
+<multiscalpel.lungs>Mode: Extract lungs</multiscalpel.lungs>
+<multiscalpel.heart>Mode: Extract heart</multiscalpel.heart>
+<multiscalpel.brain>Mode: Extract brain</multiscalpel.brain>
+<multiscalpel.bandage>Mode: Remove bandages and casts / malpractice</multiscalpel.bandage>
+<multiscalpel.speedflex>Mode: Adaptive organ extraction. Use on head for brain, left arm for kidneys, torso for liver, right arm for heart, left leg for lungs.</multiscalpel.speedflex>
+
+<multiscalpel.btn.incision>Incision</multiscalpel.btn.incision>
+<multiscalpel.btn.kidneys>Kidneys</multiscalpel.btn.kidneys>
+<multiscalpel.btn.liver>Liver</multiscalpel.btn.liver>
+<multiscalpel.btn.lungs>Lungs</multiscalpel.btn.lungs>
+<multiscalpel.btn.heart>Heart</multiscalpel.btn.heart>
+<multiscalpel.btn.brain>Brain</multiscalpel.btn.brain>
+<multiscalpel.btn.bandage>Bandages, casts, malpractice</multiscalpel.btn.bandage>
+<multiscalpel.btn.speedflex>Adaptive organ extraction</multiscalpel.btn.speedflex>-->
 
 
 <!-- /// Treatments /// -->
@@ -132,6 +151,8 @@
 <entityname.gypsum>Alçıtaşı</entityname.gypsum>
 <entitydescription.gypsum>Bir alçıda uç kısımlardaki kırıkları kapatmak için kullanılan ince bir mineral tozu. Önce bir bandaj uygulayın.</entitydescription.gypsum>
 
+<!--<entityname.gelipack></entityname.gelipack>
+<entitydescription.gelipack></entitydescription.gelipack>-->
 
 <!-- /// Blood stuff /// -->
 
@@ -446,6 +467,9 @@ Can give blood to: AB+</entitydescription.abpluscard>
 
 <afflictionname.needlec>İğne</afflictionname.needlec>
 <afflictiondescription.needlec>Plevral boşluktaki basıncı normalleştirir</afflictiondescription.needlec>
+
+<!--<afflictionname.iced></afflictionname.iced>
+<afflictiondescription.iced></afflictiondescription.iced>-->
 
 <!-- fractures, amputations, dislocations and bleeding arteries-->
 <afflictionname.ra_fracture>Kırık sağ humerus</afflictionname.ra_fracture>
